// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiled policies > admin compiles to a stable AccessPolicy 1`] = `
{
  "meta": {
    "tag": [
      {
        "code": "admin",
        "system": "https://asc-ehr.app/role-template",
        "version": "1",
      },
    ],
  },
  "name": "admin-v1",
  "resource": [
    {
      "resourceType": "Appointment",
    },
    {
      "readonly": true,
      "resourceType": "AuditEvent",
    },
    {
      "resourceType": "Coverage",
    },
    {
      "readonly": true,
      "resourceType": "Encounter",
    },
    {
      "resourceType": "Location",
    },
    {
      "resourceType": "Organization",
    },
    {
      "resourceType": "Patient",
    },
    {
      "resourceType": "Practitioner",
    },
    {
      "resourceType": "PractitionerRole",
    },
  ],
  "resourceType": "AccessPolicy",
}
`;

exports[`compiled policies > anesthesia compiles to a stable AccessPolicy 1`] = `
{
  "meta": {
    "tag": [
      {
        "code": "anesthesia",
        "system": "https://asc-ehr.app/role-template",
        "version": "1",
      },
    ],
  },
  "name": "anesthesia-v1",
  "resource": [
    {
      "criteria": "Appointment?_compartment=%facility",
      "readonly": true,
      "resourceType": "Appointment",
    },
    {
      "criteria": "Composition?_compartment=%facility",
      "readonly": true,
      "resourceType": "Composition",
    },
    {
      "criteria": "Consent?_compartment=%facility",
      "resourceType": "Consent",
    },
    {
      "criteria": "Coverage?_compartment=%facility",
      "readonly": true,
      "resourceType": "Coverage",
    },
    {
      "criteria": "Encounter?_compartment=%facility",
      "resourceType": "Encounter",
    },
    {
      "readonly": true,
      "resourceType": "Location",
    },
    {
      "criteria": "MedicationAdministration?_compartment=%facility",
      "resourceType": "MedicationAdministration",
    },
    {
      "criteria": "Observation?_compartment=%facility",
      "resourceType": "Observation",
    },
    {
      "readonly": true,
      "resourceType": "Organization",
    },
    {
      "criteria": "Patient?_compartment=%facility",
      "readonly": true,
      "resourceType": "Patient",
    },
    {
      "readonly": true,
      "resourceType": "Practitioner",
    },
    {
      "readonly": true,
      "resourceType": "PractitionerRole",
    },
    {
      "criteria": "Procedure?_compartment=%facility",
      "readonly": true,
      "resourceType": "Procedure",
    },
    {
      "criteria": "QuestionnaireResponse?_compartment=%facility",
      "resourceType": "QuestionnaireResponse",
    },
    {
      "criteria": "Task?_compartment=%facility",
      "resourceType": "Task",
    },
  ],
  "resourceType": "AccessPolicy",
}
`;

exports[`compiled policies > auditor compiles to a stable AccessPolicy 1`] = `
{
  "meta": {
    "tag": [
      {
        "code": "auditor",
        "system": "https://asc-ehr.app/role-template",
        "version": "1",
      },
    ],
  },
  "name": "auditor-v1",
  "resource": [
    {
      "readonly": true,
      "resourceType": "Appointment",
    },
    {
      "readonly": true,
      "resourceType": "AuditEvent",
    },
    {
      "readonly": true,
      "resourceType": "ChargeItem",
    },
    {
      "readonly": true,
      "resourceType": "Composition",
    },
    {
      "readonly": true,
      "resourceType": "Consent",
    },
    {
      "readonly": true,
      "resourceType": "Coverage",
    },
    {
      "readonly": true,
      "resourceType": "DiagnosticReport",
    },
    {
      "readonly": true,
      "resourceType": "DocumentReference",
    },
    {
      "readonly": true,
      "resourceType": "Encounter",
    },
    {
      "readonly": true,
      "resourceType": "Location",
    },
    {
      "readonly": true,
      "resourceType": "MedicationAdministration",
    },
    {
      "readonly": true,
      "resourceType": "Observation",
    },
    {
      "readonly": true,
      "resourceType": "Organization",
    },
    {
      "readonly": true,
      "resourceType": "Patient",
    },
    {
      "readonly": true,
      "resourceType": "Practitioner",
    },
    {
      "readonly": true,
      "resourceType": "PractitionerRole",
    },
    {
      "readonly": true,
      "resourceType": "Procedure",
    },
    {
      "readonly": true,
      "resourceType": "QuestionnaireResponse",
    },
    {
      "readonly": true,
      "resourceType": "ServiceRequest",
    },
    {
      "readonly": true,
      "resourceType": "Specimen",
    },
    {
      "readonly": true,
      "resourceType": "Task",
    },
  ],
  "resourceType": "AccessPolicy",
}
`;

exports[`compiled policies > coder compiles to a stable AccessPolicy 1`] = `
{
  "meta": {
    "tag": [
      {
        "code": "coder",
        "system": "https://asc-ehr.app/role-template",
        "version": "1",
      },
    ],
  },
  "name": "coder-v1",
  "resource": [
    {
      "readonly": true,
      "resourceType": "Appointment",
    },
    {
      "resourceType": "ChargeItem",
    },
    {
      "readonly": true,
      "resourceType": "Composition",
    },
    {
      "readonly": true,
      "resourceType": "Coverage",
    },
    {
      "readonly": true,
      "resourceType": "DiagnosticReport",
    },
    {
      "readonly": true,
      "resourceType": "Encounter",
    },
    {
      "readonly": true,
      "resourceType": "Location",
    },
    {
      "readonly": true,
      "resourceType": "MedicationAdministration",
    },
    {
      "readonly": true,
      "resourceType": "Observation",
    },
    {
      "readonly": true,
      "resourceType": "Organization",
    },
    {
      "readonly": true,
      "resourceType": "Patient",
    },
    {
      "readonly": true,
      "resourceType": "Practitioner",
    },
    {
      "readonly": true,
      "resourceType": "PractitionerRole",
    },
    {
      "readonly": true,
      "resourceType": "Procedure",
    },
    {
      "readonly": true,
      "resourceType": "QuestionnaireResponse",
    },
    {
      "resourceType": "Task",
    },
  ],
  "resourceType": "AccessPolicy",
}
`;

exports[`compiled policies > front-desk compiles to a stable AccessPolicy 1`] = `
{
  "meta": {
    "tag": [
      {
        "code": "front-desk",
        "system": "https://asc-ehr.app/role-template",
        "version": "1",
      },
    ],
  },
  "name": "front-desk-v1",
  "resource": [
    {
      "criteria": "Appointment?_compartment=%facility",
      "resourceType": "Appointment",
    },
    {
      "criteria": "Consent?_compartment=%facility",
      "resourceType": "Consent",
    },
    {
      "criteria": "Coverage?_compartment=%facility",
      "resourceType": "Coverage",
    },
    {
      "criteria": "DocumentReference?_compartment=%facility",
      "resourceType": "DocumentReference",
    },
    {
      "criteria": "Encounter?_compartment=%facility",
      "resourceType": "Encounter",
    },
    {
      "readonly": true,
      "resourceType": "Location",
    },
    {
      "readonly": true,
      "resourceType": "Organization",
    },
    {
      "criteria": "Patient?_compartment=%facility",
      "resourceType": "Patient",
    },
    {
      "readonly": true,
      "resourceType": "Practitioner",
    },
    {
      "readonly": true,
      "resourceType": "PractitionerRole",
    },
    {
      "criteria": "ServiceRequest?_compartment=%facility",
      "resourceType": "ServiceRequest",
    },
    {
      "criteria": "Task?_compartment=%facility",
      "resourceType": "Task",
    },
  ],
  "resourceType": "AccessPolicy",
}
`;

exports[`compiled policies > gi-physician compiles to a stable AccessPolicy 1`] = `
{
  "meta": {
    "tag": [
      {
        "code": "gi-physician",
        "system": "https://asc-ehr.app/role-template",
        "version": "1",
      },
    ],
  },
  "name": "gi-physician-v1",
  "resource": [
    {
      "criteria": "Appointment?_compartment=%facility",
      "readonly": true,
      "resourceType": "Appointment",
    },
    {
      "criteria": "ChargeItem?_compartment=%facility",
      "readonly": true,
      "resourceType": "ChargeItem",
    },
    {
      "criteria": "Composition?_compartment=%facility",
      "resourceType": "Composition",
      "writeConstraint": [
        {
          "expression": "%before.exists() implies %before.status != 'final'",
          "language": "text/fhirpath",
        },
      ],
    },
    {
      "criteria": "Consent?_compartment=%facility",
      "resourceType": "Consent",
    },
    {
      "criteria": "Coverage?_compartment=%facility",
      "readonly": true,
      "resourceType": "Coverage",
    },
    {
      "criteria": "DiagnosticReport?_compartment=%facility",
      "resourceType": "DiagnosticReport",
    },
    {
      "criteria": "DocumentReference?_compartment=%facility",
      "resourceType": "DocumentReference",
    },
    {
      "criteria": "Encounter?_compartment=%facility",
      "resourceType": "Encounter",
    },
    {
      "readonly": true,
      "resourceType": "Location",
    },
    {
      "criteria": "MedicationAdministration?_compartment=%facility",
      "readonly": true,
      "resourceType": "MedicationAdministration",
    },
    {
      "criteria": "Observation?_compartment=%facility",
      "readonly": true,
      "resourceType": "Observation",
    },
    {
      "readonly": true,
      "resourceType": "Organization",
    },
    {
      "criteria": "Patient?_compartment=%facility",
      "readonly": true,
      "resourceType": "Patient",
    },
    {
      "readonly": true,
      "resourceType": "Practitioner",
    },
    {
      "readonly": true,
      "resourceType": "PractitionerRole",
    },
    {
      "criteria": "Procedure?_compartment=%facility",
      "resourceType": "Procedure",
    },
    {
      "criteria": "QuestionnaireResponse?_compartment=%facility",
      "resourceType": "QuestionnaireResponse",
    },
    {
      "criteria": "ServiceRequest?_compartment=%facility",
      "resourceType": "ServiceRequest",
    },
    {
      "criteria": "Specimen?_compartment=%facility",
      "resourceType": "Specimen",
    },
    {
      "criteria": "Task?_compartment=%facility",
      "resourceType": "Task",
    },
  ],
  "resourceType": "AccessPolicy",
}
`;

exports[`compiled policies > rn compiles to a stable AccessPolicy 1`] = `
{
  "meta": {
    "tag": [
      {
        "code": "rn",
        "system": "https://asc-ehr.app/role-template",
        "version": "1",
      },
    ],
  },
  "name": "rn-v1",
  "resource": [
    {
      "criteria": "Appointment?_compartment=%facility",
      "readonly": true,
      "resourceType": "Appointment",
    },
    {
      "criteria": "Composition?_compartment=%facility",
      "readonly": true,
      "resourceType": "Composition",
    },
    {
      "criteria": "Consent?_compartment=%facility",
      "resourceType": "Consent",
    },
    {
      "criteria": "Coverage?_compartment=%facility",
      "readonly": true,
      "resourceType": "Coverage",
    },
    {
      "criteria": "DiagnosticReport?_compartment=%facility",
      "resourceType": "DiagnosticReport",
    },
    {
      "criteria": "DocumentReference?_compartment=%facility",
      "resourceType": "DocumentReference",
    },
    {
      "criteria": "Encounter?_compartment=%facility",
      "resourceType": "Encounter",
    },
    {
      "readonly": true,
      "resourceType": "Location",
    },
    {
      "criteria": "MedicationAdministration?_compartment=%facility",
      "readonly": true,
      "resourceType": "MedicationAdministration",
    },
    {
      "criteria": "Observation?_compartment=%facility",
      "readonly": true,
      "resourceType": "Observation",
    },
    {
      "readonly": true,
      "resourceType": "Organization",
    },
    {
      "criteria": "Patient?_compartment=%facility",
      "readonly": true,
      "resourceType": "Patient",
    },
    {
      "readonly": true,
      "resourceType": "Practitioner",
    },
    {
      "readonly": true,
      "resourceType": "PractitionerRole",
    },
    {
      "criteria": "Procedure?_compartment=%facility",
      "resourceType": "Procedure",
    },
    {
      "criteria": "QuestionnaireResponse?_compartment=%facility",
      "resourceType": "QuestionnaireResponse",
    },
    {
      "criteria": "ServiceRequest?_compartment=%facility",
      "resourceType": "ServiceRequest",
    },
    {
      "criteria": "Specimen?_compartment=%facility",
      "resourceType": "Specimen",
    },
    {
      "criteria": "Task?_compartment=%facility",
      "resourceType": "Task",
    },
  ],
  "resourceType": "AccessPolicy",
}
`;

exports[`compiled policies > tech compiles to a stable AccessPolicy 1`] = `
{
  "meta": {
    "tag": [
      {
        "code": "tech",
        "system": "https://asc-ehr.app/role-template",
        "version": "1",
      },
    ],
  },
  "name": "tech-v1",
  "resource": [
    {
      "criteria": "Appointment?_compartment=%facility",
      "readonly": true,
      "resourceType": "Appointment",
    },
    {
      "criteria": "Composition?_compartment=%facility",
      "readonly": true,
      "resourceType": "Composition",
    },
    {
      "criteria": "Coverage?_compartment=%facility",
      "readonly": true,
      "resourceType": "Coverage",
    },
    {
      "criteria": "DocumentReference?_compartment=%facility",
      "resourceType": "DocumentReference",
    },
    {
      "criteria": "Encounter?_compartment=%facility",
      "resourceType": "Encounter",
    },
    {
      "readonly": true,
      "resourceType": "Location",
    },
    {
      "criteria": "MedicationAdministration?_compartment=%facility",
      "readonly": true,
      "resourceType": "MedicationAdministration",
    },
    {
      "criteria": "Observation?_compartment=%facility",
      "readonly": true,
      "resourceType": "Observation",
    },
    {
      "readonly": true,
      "resourceType": "Organization",
    },
    {
      "criteria": "Patient?_compartment=%facility",
      "readonly": true,
      "resourceType": "Patient",
    },
    {
      "readonly": true,
      "resourceType": "Practitioner",
    },
    {
      "readonly": true,
      "resourceType": "PractitionerRole",
    },
    {
      "criteria": "Procedure?_compartment=%facility",
      "resourceType": "Procedure",
    },
    {
      "criteria": "QuestionnaireResponse?_compartment=%facility",
      "resourceType": "QuestionnaireResponse",
    },
    {
      "criteria": "Specimen?_compartment=%facility",
      "resourceType": "Specimen",
    },
    {
      "criteria": "Task?_compartment=%facility",
      "resourceType": "Task",
    },
  ],
  "resourceType": "AccessPolicy",
}
`;
